--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<version>4.1.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.asynchttpclient</groupId>
+			<artifactId>async-http-client</artifactId>
+			<version>2.1.0-alpha5</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
