--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 socketTimeout=3000
-connectionTimeout=5000
-retryCount=5
+connectTimeout=500
+requestTimeout=2000
+retryCount=10
 useNonBlockingMode=true
