--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,7 @@
 socketTimeout=3000
-connectTimeout=100
+connectTimeout=400
 requestTimeout=3000
 retryCount=10
 useNonBlockingMode=true
+platformUrl=https://cleeng.com/api/3.0/json-rpc
+platformUrlSandbox=https://sandbox.cleeng.com/api/3.0/json-rpc
