--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 					</descriptorRefs>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
