--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 jdk: oraclejdk8
-script: "mvn jacoco:report coveralls:report"
+script: "mvn jacoco:report coveralls:report -DskipTests"
