--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 jdk: oraclejdk8
-script: "mvn cobertura:cobertura coveralls:report"
+script: "mvn clean test jacoco:report coveralls:report"
